force-app/main/default/objects/b3o__Certificate_Type__c/b3o__Certificate_Type__c.object-meta.xml
<CustomObject>
    <label>Certificate Type</label>
    <nameField>
        <label>Certificate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certificate Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>