force-app/main/default/objects/b3o__Certificate_Type__c/fields/b3o__Require_End_Date__c.field-meta.xml
<CustomField>
    <fullName>b3o__Require_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require End Date</label>
    <type>Checkbox</type>
</CustomField>