force-app/main/default/objects/b3o__Certificate_Type__c/listViews/b3o__All.listView-meta.xml
<ListView>
    <fullName>b3o__All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>b3o__Require_End_Date__c</columns>
    <columns>b3o__Require_Start_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>